Attempt to fix overflow issues on iphone

--- a/styles.css
+++ b/styles.css
@@ -381,13 +381,27 @@ input {
   body {
     overflow: hidden;
   }
-  
+
   h1 {
     text-align: center;
   }
 
   .page-header {
     margin-top: 2.5rem;
+  }
+
+  html {
+    position: fixed;
+    height: 100%;
+    overflow: hidden;
+  }
+  
+  body {
+    width: 100vw;
+    height: 100vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
   }
 
 }
